--- a/RMSoftwareModularBot/RMSoftwareModularBot.csproj
+++ b/RMSoftwareModularBot/RMSoftwareModularBot.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>RMSoftwareModularBot</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AssemblyVersion>1.3.452.612</AssemblyVersion>
+    <AssemblyVersion>1.3.667.914</AssemblyVersion>
     <ShouldCreateLogs>True</ShouldCreateLogs>
     <AdvancedSettingsExpanded>True</AdvancedSettingsExpanded>
     <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
@@ -106,11 +106,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogWriter.cs" />
     <Compile Include="CommandList.cs" />
     <Compile Include="CoreModule.cs" />
     <Compile Include="CustomCommandProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RDTClient.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -118,6 +120,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\RMSoftwareICO32.png" />
     <None Include="Resources\RMSoftwareICO.png" />
     <None Include="App.config" />
     <Content Include="OnStart.bcmd">
