--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -192,8 +192,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Component\ConsoleIO.cs" />
+    <Compile Include="Component\PseudoMessage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component\CoreScript.cs" />
+    <Compile Include="Component\CustomCommandManager.cs" />
     <Compile Include="Component\DiscordNET.cs" />
     <Compile Include="Component\SetupWizard.cs" />
     <Compile Include="Configuration.cs" />
