--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /ModularBOT/ModularBOT.csproj.user
 /RMSoftware.IO/obj/Debug
 /RMSoftwareModularBot/obj/Debug
+/TestModule/bin/Debug
+/TestModule/obj/Debug
