FIX ;comment. use REM

--- a/TestModule/TestModule.csproj
+++ b/TestModule/TestModule.csproj
@@ -143,7 +143,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>; Move module &amp; property item to startup project
+    <PostBuildEvent>REM Move module &amp; property item to startup project
 MOVE "$(TargetPath) " "$(SolutionDir)\ModularBOT\$(OutDir)modules\$(TargetFileName)"
 MOVE "$(TargetDir)\$(TargetName).mpi" "$(SolutionDir)\ModularBOT\$(OutDir)modules\$(TargetName).mpi"</PostBuildEvent>
   </PropertyGroup>
