ADD_PROJECT -> Discord.Addons.Interactive (.NET 4.6.1)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 /TestModule/obj/Debug
 /TestModule/obj/Release
 /TestModule/bin/Release
+/Discord.Addons.Interactive/obj/Release
+/Discord.Addons.Interactive/bin/Release
+/Discord.Addons.Interactive/bin/Debug
+/Discord.Addons.Interactive/obj/Debug
+/Discord.Addons.Interactive/Discord.Addons.Interactive.csproj.user
