Fix license in project

--- a/Discord.Addons.Interactive/Discord.Addons.Interactive.csproj
+++ b/Discord.Addons.Interactive/Discord.Addons.Interactive.csproj
@@ -145,10 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="LICENSE.MD" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
