--- a/Discord.Addons.Interactive/Discord.Addons.Interactive.csproj
+++ b/Discord.Addons.Interactive/Discord.Addons.Interactive.csproj
@@ -114,6 +114,9 @@
     <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -127,11 +130,13 @@
     <Compile Include="Callbacks\IReactionCallback.cs" />
     <Compile Include="Criteria\Criteria.cs" />
     <Compile Include="Criteria\EmptyCriterion.cs" />
-    <Compile Include="Criteria\EnsureFromChannelCriterion.cs" />
     <Compile Include="Criteria\EnsureFromUserCriterion.cs" />
     <Compile Include="Criteria\EnsureSourceChannelCriterion.cs" />
     <Compile Include="Criteria\EnsureSourceUserCriterion.cs" />
     <Compile Include="Criteria\ICriterion.cs" />
+    <Compile Include="InlineReaction\InlineReactionCallback.cs" />
+    <Compile Include="InlineReaction\ReactionCallbackData.cs" />
+    <Compile Include="InlineReaction\ReactionCallbackItem.cs" />
     <Compile Include="InteractiveBase.cs" />
     <Compile Include="InteractiveService.cs" />
     <Compile Include="InteractiveServiceConfig.cs" />
@@ -140,6 +145,7 @@
     <Compile Include="Paginator\PaginatedAppearanceOptions.cs" />
     <Compile Include="Paginator\PaginatedMessage.cs" />
     <Compile Include="Paginator\PaginatedMessageCallback.cs" />
+    <Compile Include="Paginator\ReactionList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\OkResult.cs" />
   </ItemGroup>
