--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /Discord.Addons.Interactive/bin/Debug
 /Discord.Addons.Interactive/obj/Debug
 /Discord.Addons.Interactive/Discord.Addons.Interactive.csproj.user
+/TestModule/obj/MONO_RELEASE
+/Discord.Addons.Interactive/obj/MONO_RELEASE
+/Discord.Addons.Interactive/bin/MONO_RELEASE
