QuoteDB Module Addition

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /CustomModuleTemplate/obj/Debug
 /CustomModuleTemplate/bin/Release
 /CustomModuleTemplate
+/QuotesDB/bin/Release
+/QuotesDB/obj/Release
+/QuotesDB/bin/Debug
+/QuotesDB/obj/Debug
