--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -230,6 +230,33 @@
     <Compile Include="Component\ConfigEntities\GlobalCommandPrefix.cs" />
     <Compile Include="Component\ConfigEntities\LockPrefix.cs" />
     <Compile Include="Component\ConfigEntities\GlobalInitChannel.cs" />
+    <Compile Include="Component\ConsoleCommands\AboutCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\CfgLCMCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ChannelsCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\CLSCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigCFUCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigDCEvtLLCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigSCCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigSLPCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigUPRCCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConmsgCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\DisableCMDCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\EnableCMDCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\GuildNameCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\GuildsCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\LeaveCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ListCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\MBotDataCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\MyRolesCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\RolesCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\RSKillCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\SearchCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\SetgchCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\SetvarCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\StatusCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\StopCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\TSKillCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\UsersCommand.cs" />
     <Compile Include="Component\ConsoleIO.cs" />
     <Compile Include="Component\CoreModule.cs" />
     <Compile Include="Component\ModuleProperties.cs" />
