New GuildScreen update
• Properly tell screens they are inactive
• Add+Implement MyRolesScreen
• Various cleanup/reformat on ConsoleScreen
• NOTE: The "newguilds" command will be renamed to guilds, very soon. The newguilds command is simply for testing.

--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Component\ConsoleCommands\TSKillCommand.cs" />
     <Compile Include="Component\ConsoleCommands\UsersCommand.cs" />
     <Compile Include="Component\ConsoleIO.cs" />
+    <Compile Include="Component\ConsoleScreens\MyRolesScreen.cs" />
     <Compile Include="Component\ConsoleScreens\UsersScreen.cs" />
     <Compile Include="Component\ConsoleScreens\GuildsScreen.cs" />
     <Compile Include="Component\ConsoleScreens\TestConsoleScreen.cs" />
