--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /QuotesDB/obj/Release
 /QuotesDB/bin/Debug
 /QuotesDB/obj/Debug
+/RMSFT.PFFrames/obj/Release
+/RMSFT.PFFrames/bin/Debug
+/RMSFT.PFFrames/obj/Debug
