MB-PROJ: Includes

--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -280,12 +280,44 @@
     <Compile Include="Component\ConsoleScreens\GuildsScreen.cs" />
     <Compile Include="Component\ConsoleScreens\TestConsoleScreen.cs" />
     <Compile Include="Component\CoreModule.cs" />
+    <Compile Include="Component\CSFunctions\CSFAttach.cs" />
+    <Compile Include="Component\CSFunctions\CSFEchoTTS.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedAddFieldI.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedImage.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedThImage.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedFooter.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedFooterI.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedAuthor.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedAuthorI.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedColor.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedAddField.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedSend.cs" />
+    <Compile Include="Component\CSFunctions\CSFCmd.cs" />
+    <Compile Include="Component\CSFunctions\CSFWait.cs" />
+    <Compile Include="Component\CSFunctions\CSFStrmStatus.cs" />
+    <Compile Include="Component\CSFunctions\CSFOrb.cs" />
+    <Compile Include="Component\CSFunctions\CSFTitle.cs" />
+    <Compile Include="Component\CSFunctions\CSFSet.cs" />
+    <Compile Include="Component\CSFunctions\CSFSetTarget.cs" />
+    <Compile Include="Component\CSFunctions\CSFStart.cs" />
+    <Compile Include="Component\CSFunctions\CSFExit.cs" />
+    <Compile Include="Component\CSFunctions\CSFIf.cs" />
+    <Compile Include="Component\CSFunctions\CSFDelMsg.cs" />
+    <Compile Include="Component\CSFunctions\CSFCounterStart.cs" />
+    <Compile Include="Component\CSFunctions\CSFCounterStop.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbedDesc.cs" />
+    <Compile Include="Component\CSFunctions\CSFEmbed.cs" />
+    <Compile Include="Component\CSFunctions\CSFRoleDel.cs" />
+    <Compile Include="Component\CSFunctions\CSFRoleAssign.cs" />
+    <Compile Include="Component\CSFunctions\CSFRoleAdd.cs" />
+    <Compile Include="Component\CSFunctions\CSFEcho.cs" />
     <Compile Include="Component\ModuleProperties.cs" />
     <Compile Include="Component\OS_SystemInfo.cs" />
     <Compile Include="Component\PermissionManagement.cs" />
     <Compile Include="Entity\ConfigEntity.cs" />
     <Compile Include="Entity\ConsoleCommand.cs" />
     <Compile Include="Entity\ConsoleScreen.cs" />
+    <Compile Include="Entity\CSFunction.cs" />
     <Compile Include="Entity\PseudoMessage.cs" />
   </ItemGroup>
   <ItemGroup>
