--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Component\ConsoleCommands\AboutCommand.cs" />
     <Compile Include="Component\ConsoleCommands\CfgLCMCommand.cs" />
     <Compile Include="Component\ConsoleCommands\ChannelsCommand.cs" />
+    <Compile Include="Component\ConsoleCommands\ConfigResetCommand.cs" />
     <Compile Include="Component\ConsoleCommands\ConIOCrashCommand.cs" />
     <Compile Include="Component\ConsoleCommands\CLSCommand.cs" />
     <Compile Include="Component\ConsoleCommands\ConfigCFUCommand.cs" />
@@ -273,6 +274,7 @@
     <Compile Include="Component\ConsoleCommands\UsersCommand.cs" />
     <Compile Include="Component\ConsoleIO.cs" />
     <Compile Include="Component\ConsoleScreens\ChannelsScreen.cs" />
+    <Compile Include="Component\ConsoleScreens\PromptScreen.cs" />
     <Compile Include="Component\ConsoleScreens\RolesScreen.cs" />
     <Compile Include="Component\ConsoleScreens\KillScreen.cs" />
     <Compile Include="Component\ConsoleScreens\SetupWizardScreen.cs" />
