TMS-Proj: Includes

--- a/TestModule/TestModule.csproj
+++ b/TestModule/TestModule.csproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <Compile Include="ConfigEntities\AllowSnipe.cs" />
     <Compile Include="ConfigEntities\SniperQueueSize.cs" />
+    <Compile Include="ConfigEntities\ModLogAliasMode.cs" />
     <Compile Include="ConfigEntities\StarboardAliasMode.cs" />
     <Compile Include="ConfigEntities\StarboardChannel.cs" />
     <Compile Include="ConfigEntities\ServerMuteRole.cs" />
