--- a/ModularBOT/ModularBOT.csproj
+++ b/ModularBOT/ModularBOT.csproj
@@ -231,6 +231,7 @@
   <ItemGroup>
     <Compile Include="Component\CommandList.cs" />
     <Compile Include="Component\ConfigEntities\BlacklistMode.cs" />
+    <Compile Include="Component\ConfigEntities\EnablePerModulePrefix.cs" />
     <Compile Include="Component\ConfigEntities\MassDeploymentMode.cs" />
     <Compile Include="Component\ConfigEntities\CheckForUpdates.cs" />
     <Compile Include="Component\ConfigEntities\GuildPrefix.cs" />
